--- a/style.css
+++ b/style.css
@@ -302,13 +302,15 @@ img{
 }
 
 .work .container #divimg{
-    width: fit-content;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
 }
 
 .work .container #divimg img{
     border-radius: 20px;
+    width: 100%;
+    max-height: 80vh;
 }
 
 
