--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section{
     left: 0;
     height: 100%;
     width: 100%;
-    background: background-image: linear-gradient(to right top, #040608, #10283b, #0e4872, #1768ad, #3889eb);
+    background-image: linear-gradient(to right top, #162029, #1f4768, #0e4872, #1768ad, #3889eb);
     mix-blend-mode: overlay;
 }
 
